--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,10 +1,200 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Book Detail</title>
-</head>
-<body>
-    <div>book detail</div>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}
+{{title}}
+{% endblock %}
+
+{% block content %}
+<style type="text/css">
+    #wrapper{
+        width:950px;
+        margin:0 auto;
+    }
+    .detail_title {
+        word-wrap: break-word;
+        font-size: 25px;
+        font-weight: bold;
+        color: #494949;
+        text-align:left;
+    }
+    .clear{
+        clear:both;
+        line-height:0;
+        font-size:0;
+    }
+    #content{
+        margin-top:-10px;
+    }
+    .article{
+        float: left;
+        width: 590px;
+        padding-right: 40px;
+    }
+    .subjectwrap{
+        word-break: break-all;
+        float:none;
+        width:auto;
+        position:relative;
+        margin-bottom:15px;
+        display:block;
+        font: 14px Arial, Helvetica, sans-serif;
+        line-height: 150%;
+        color: #666666;
+    }
+    .subject{
+        margin: 2px 0 0 0;
+        float:left;
+        width:415px;
+    }
+    #mainpic {
+        float: left;
+        text-align: center;
+        margin: 0 12px 0 0;
+        max-width: 120px;
+        overflow: hidden;
+    }
+    #mainpic a img{
+        margin-bottom:10px;
+        width:100%;
+        height:100%;
+    }
+    #info {
+        float: left;
+        max-width: 248px;
+        word-wrap: break-word;
+    }
+    #info .show{
+        color: black;
+    }
+    #interest_sectl{
+        float: left;
+        width: 155px;
+        margin: 2px 0 0 0;
+        padding: 0 0 0 15px;
+        border-left: 1px solid #eaeaea;
+        color: #9b9b9b;
+    }
+    #interest_sectl .score_to_show{
+        color: #494949;
+        padding: 0;
+        margin:10px 10px 10px 0px;
+        min-width: 30%;
+        font-size: 28px;
+    }
+    #interest_sectl .star, .power, .perc{
+        float:left;
+    }
+    #interest_sectl .five_star .power{
+        margin: 3px 4px;
+        height: 10px;
+        width: 63px;
+        background: #ffd596 none repeat scroll 0 0;
+    }
+    #interest_sectl .four_star, .there_star, .two_star, .one_star{
+        clear:both;
+    }
+    #interest_sectl .four_star .power{
+        margin: 3px 4px;
+        height: 10px;
+        width: 30px;
+        background: #ffd596 none repeat scroll 0 0;
+    }
+    #interest_sectl .there_star .power{
+        margin: 3px 4px;
+        height: 10px;
+        width: 8px;
+        background: #ffd596 none repeat scroll 0 0;
+    }
+    #interest_sectl .two_star .power{
+        margin: 3px 4px;
+        height: 10px;
+        width: 0px;
+        background: #ffd596 none repeat scroll 0 0;
+    }
+    #interest_sectl .one_star .power{
+        margin: 3px 4px;
+        height: 10px;
+        width: 0px;
+        background: #ffd596 none repeat scroll 0 0;
+    }
+    .other{
+        clear:both;
+    }
+    .aside{
+        position: static;
+        left:640px;
+        bottom: 200px;
+    }
+    #footer{
+        clear:both;
+    }
+</style>
+
+<div id="wrapper">
+    <h1>
+        <span class="detail_title">{{book_detail.title}}</span>
+        <div class="clear"></div>
+    </h1>
+    <div id="content">
+        <div class="article">
+            <div class="subjectwrap">
+                <div class="subject">
+                    <div id="mainpic">
+                        <a class="nbg" href={{book_detail.cover_url}} title={{book_detail.title}}>
+                            <img src={{book_detail.cover_url}} title="点击查看大图" alt={{book_detail.title}}>
+                        </a>
+                    </div>
+                    <div id="info">
+                        <div class="book_author">作者: <span class="show">{{book_detail.author}}</span></div>
+                        <div class="book_publisher">出版社: <span class="show">{{book_detail.publisher}}</span></div>
+                        {% if book_detail.translator != '无' %}
+                            <div class="book_translator">译者: <span class="show">{{book_detail.translator}}</span></div>
+                        {% endif %}
+                        <div class="book_publisher_date">出版年: <span class="show">{{book_detail.publisher_date}}</span></div>
+                        <div class="book_page">页数: <span class="show">{{book_detail.page}}</span></div>
+                        <div class="book_price">定价: <span class="show">{{book_detail.price}}</span></div>
+                        <div class="book_binding">装帧: <span class="show">{{book_detail.binding}}</span></div>
+                        <div class="book_Isbn">ISBN: <span class="show">{{book_detail.Isbn}}</span></div>
+                    </div>
+                </div>
+                <div id="interest_sectl">
+                    <div class="rate_logo">悦读评分</div>
+                    <div class="score_to_show">{{book_detail.score}}</div>
+                    <div class="score_rule">
+                        <div class="five_star">
+                            <div class="star">5星</div>
+                            <div class="power"></div>
+                            <div class="perc">62.8%</div>
+                        </div>
+                        <div class="four_star">
+                            <div class="star">4星</div>
+                            <div class="power"></div>
+                            <div class="perc">29.0%</div>
+                        </div>
+                        <div class="there_star">
+                            <div class="star">3星</div>
+                            <div class="power"></div>
+                            <div class="perc">8.4%</div>
+                        </div>
+                        <div class="two_star">
+                            <div class="star">2星</div>
+                            <div class="power"></div>
+                            <div class="perc">0.6%</div>
+                        </div>
+                        <div class="one_star">
+                            <div class="star">1星</div>
+                            <div class="power"></div>
+                            <div class="perc">0.2%</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="other">
+                add other
+            </div>
+        </div>
+        <div class="aside">as</div>
+    </div>
+    <div id="footer">footer</div>
+</div>
+{% endblock %}
