--- a/templates/home.html
+++ b/templates/home.html
@@ -108,50 +108,49 @@
             </div>
             <p>文学</p>
             <div class = 'label'>
-                <div class = 'alabel'><a href = "https://baidu.com">小说</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">随笔</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">日本文学</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">散文</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">童话</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">诗歌</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">名著</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">港台</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='小说' %}">小说</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='随笔' %}">随笔</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='日本文学' %}">日本文学</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='散文' %}">散文</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='童话' %}">童话</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='诗歌' %}">诗歌</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='名著' %}">名著</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='港台' %}">港台</a></div>
             </div>
             <p>流行</p>
             <div class = 'label'>
-                <div class = 'alabel'><a href = "https://baidu.com">漫画</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">绘本</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">推理</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">青春</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">言情</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">科幻</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">武侠</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">奇幻</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='漫画' %}">漫画</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='绘本' %}">绘本</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='推理' %}">推理</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='青春' %}">青春</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='言情' %}">言情</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='科幻' %}">科幻</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='武侠' %}">武侠</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='奇幻' %}">奇幻</a></div>
             </div>
             <p>文化</p>
             <div class = 'label'>
-                <div class = 'alabel'><a href = "https://baidu.com">历史</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">哲学</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">传记</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">设计</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">建筑</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">电影</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">回忆录</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">音乐</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='历史' %}">历史</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='哲学' %}">哲学</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='传记' %}">传记</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='设计' %}">设计</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='建筑' %}">建筑</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='电影' %}">电影</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='回忆录' %}">回忆录</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='音乐' %}">音乐</a></div>
             </div>
             <p>科技</p>
             <div class = 'label'>
-                <div class = 'alabel'><a href = "https://baidu.com">科普</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">互联网</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">编程</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">交互设计</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">算法</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">通信</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">神经网络</a></div>
-                <div class = 'alabel'><a href = "https://baidu.com">机器学习</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='科普' %}">科普</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='互联网' %}">互联网</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='编程' %}">编程</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='交互设计' %}">交互设计</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='算法' %}">算法</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='通信' %}">通信</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='神经网络' %}">神经网络</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='机器学习' %}">机器学习</a></div>
             </div>
         </div>
     </div>
-
 </div>
 {% endblock %}
