--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,152 @@
 {% endblock %}
 
 {% block content %}
-<div class="posts">
-    {% for book in book_list %}
-        <h2 class="post-title">{{ book.title }}</h2>
-    {% endfor %}
+<style type="text/css">
+    .content{
+        height: 470px;
+        width: 80%;
+        margin-left: 10%;
+    }
+    .article{
+        height: 100%;
+        width: 60%;
+        float: left;
+    }
+    .aside{
+        height: 100%;
+        width: 40%;
+        float: left;
+    }
+    .aside .aside_wrap{
+        background-color: antiquewhite;
+        margin-left: 50px;
+    }
+    .post-title{
+        height: 200px;
+        width: 19%;
+        background-color: bisque;
+        float: left;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: 3px;
+        margin-right: 3px;
+    }
+    .newbook{
+        border-bottom-style: groove;
+        height: 20px;
+        padding-bottom: 3px;
+    }
+    .cover{
+        height: 160px;
+        width: 100%;
+    }
+    .bookname{
+        height: 20px;
+        width: 100%;
+    }
+    .author{
+        height: 20px;
+        width: 100%;
+    }
+    a img{
+        height: 160px;
+        width: 100%;
+    }
+    .headline{
+        padding-bottom: 3px;
+        border-bottom-style: groove;
+        height: 30px;
+    }
+    .label{
+        height: 60px;
+        width: 100%;
+        margin-left: 10px;
+    }
+    .alabel{
+        height: 25px;
+        width: 18%;
+        margin: 1px 2px 1px 4px;
+        float: left;
+    }
+    .alabel a{
+        color:brown;
+    }
+    .book_title{
+        color: #000;
+    }
+</style>
+
+<div class = 'content'>
+    <div class = 'article'>
+        <div class='newbook'>
+            <h3>新书速递</h3>
+        </div>
+        {% for book in book_list %}
+            <div class="post-title">
+                <div class = 'cover'>
+                    <a href="{% url 'detail' book_id=book.book_id %}">
+                        <img src={{book.cover_url}}>
+                    </a>
+                </div>
+                <div class = 'bookname'>
+                    <a href="{% url 'detail' book_id=book.book_id %}">
+                        <span class="book_title">{{book.title}}</span>
+                    </a>
+                </div>
+                <div class = 'author'>{{book.author}}</div>
+            </div>
+        {% endfor %}
+    </div>
+    <div class = 'aside'>
+        <div class = "aside_wrap">
+            <div class='headline'>
+                <h2>热门标签</h2>
+            </div>
+            <p>文学</p>
+            <div class = 'label'>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='小说' %}">小说</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='随笔' %}">随笔</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='日本文学' %}">日本文学</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='散文' %}">散文</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='童话' %}">童话</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='诗歌' %}">诗歌</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='名著' %}">名著</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='港台' %}">港台</a></div>
+            </div>
+            <p>流行</p>
+            <div class = 'label'>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='漫画' %}">漫画</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='绘本' %}">绘本</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='推理' %}">推理</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='青春' %}">青春</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='言情' %}">言情</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='科幻' %}">科幻</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='武侠' %}">武侠</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='奇幻' %}">奇幻</a></div>
+            </div>
+            <p>文化</p>
+            <div class = 'label'>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='历史' %}">历史</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='哲学' %}">哲学</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='传记' %}">传记</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='设计' %}">设计</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='建筑' %}">建筑</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='电影' %}">电影</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='回忆录' %}">回忆录</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='音乐' %}">音乐</a></div>
+            </div>
+            <p>科技</p>
+            <div class = 'label'>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='科普' %}">科普</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='互联网' %}">互联网</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='编程' %}">编程</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='交互设计' %}">交互设计</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='算法' %}">算法</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='通信' %}">通信</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='神经网络' %}">神经网络</a></div>
+                <div class = 'alabel'><a href = "{% url 'laber' laber_title='机器学习' %}">机器学习</a></div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
