modifying the sign up

--- a/templates/base.html
+++ b/templates/base.html
@@ -191,8 +191,8 @@
         <div><a href="https://www.baidu.com/" class="reader">读书</a></div>
     </div>
     <div class = "login_register">
-        <div><a href="https://www.baidu.com/" class="login">登录</a></div>
-        <div><a href="https://www.baidu.com/" class="register">注册</a></div>
+        <div><a href="/login/" class="login">登录</a></div>
+        <div><a href="/register/" class="register">注册</a></div>
     </div>
 </div>
 <div class = "wrap">
