--- a/templates/account.html
+++ b/templates/account.html
@@ -1,40 +1,11 @@
 <!doctype html>
+{% load staticfiles %}
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>账户设置</title>
-        <style>
-        form{
-            width: 300px;
-            padding: 20px;
-            border: 6px solid palevioletred;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        h2{
-            text-align: center;
-        }
-        input{
-            display: block;
-            width: 100%;
-            margin: 20px 0;
-            height: 30px;
-            border: 1px solid palevioletred;
-        }
-        input[type="file"]{
-            border: none
-        }
-        input[type="submit"]{
-            border: none;
-            background-color: rgba(219, 112, 147, 0.5);
-        }
-        input[type="submit"]:hover{
-            background-color: rgba(219, 112, 147, 1);
-        }
-    </style>
+    <link rel="stylesheet" href="{% static "css/account.css" %}"
 </head>
 <body>
     <form id="user_form" method="post" action="/account/{{ user.username }}/" enctype="multipart/form-data">
