--- a/templates/login.html
+++ b/templates/login.html
@@ -1,39 +1,10 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>用户登录</title>
-    <style>
-        form{
-            width: 300px;
-            padding: 20px;
-            border: 6px solid palevioletred;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        h2{
-            text-align: center;
-        }
-        input{
-            display: block;
-            width: 100%;
-            margin: 20px 0;
-            height: 30px;
-            border: 1px solid palevioletred;
-        }
-        input[type="submit"]{
-            border: none;
-            background-color: rgba(219, 112, 147, 0.5);
-        }
-        input[type="submit"]:hover{
-            background-color: rgba(219, 112, 147, 1);
-        }
-        .warning{
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static "css/login.css" %}" />
 </head>
 <body>
     <p class="warning">{{ error_message }}</p>
