--- a/templates/set_account_success.html
+++ b/templates/set_account_success.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>账户设置成功</title>
-    <style>
-        div{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        p{
-            font-size: 24px;
-        }
-        a{
-            color: palevioletred;
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static "css/set_account_success.css" %}"
 </head>
 <body>
     <div>
