--- a/templates/detail.html
+++ b/templates/detail.html
@@ -8,7 +8,7 @@
 
 {% block css_link %}
     <link rel="stylesheet" href="{% static "css/detail.css" %}" />
-{% block content %}
+{% endblock %}
 
 {% block content %}
 <div id="wrapper">
