--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,132 +4,13 @@
 {{title}}
 {% endblock %}
 
-{% block content %}
-<style type="text/css">
-    #wrapper{
-        width:950px;
-        margin:0 auto;
-    }
-    .detail_title {
-        word-wrap: break-word;
-        font-size: 25px;
-        font-weight: bold;
-        color: #494949;
-        text-align:left;
-    }
-    .clear{
-        clear:both;
-        line-height:0;
-        font-size:0;
-    }
-    #content{
-        margin-top:-10px;
-    }
-    .article{
-        float: left;
-        width: 590px;
-        padding-right: 40px;
-    }
-    .subjectwrap{
-        word-break: break-all;
-        float:none;
-        width:auto;
-        position:relative;
-        margin-bottom:15px;
-        display:block;
-        font: 14px Arial, Helvetica, sans-serif;
-        line-height: 150%;
-        color: #666666;
-    }
-    .subject{
-        margin: 2px 0 0 0;
-        float:left;
-        width:415px;
-    }
-    #mainpic {
-        float: left;
-        text-align: center;
-        margin: 0 12px 0 0;
-        max-width: 120px;
-        overflow: hidden;
-    }
-    #mainpic a img{
-        margin-bottom:10px;
-        width:100%;
-        height:100%;
-    }
-    #info {
-        float: left;
-        max-width: 248px;
-        word-wrap: break-word;
-    }
-    #info .show{
-        color: black;
-    }
-    #interest_sectl{
-        float: left;
-        width: 155px;
-        margin: 2px 0 0 0;
-        padding: 0 0 0 15px;
-        border-left: 1px solid #eaeaea;
-        color: #9b9b9b;
-    }
-    #interest_sectl .score_to_show{
-        color: #494949;
-        padding: 0;
-        margin:10px 10px 10px 0px;
-        min-width: 30%;
-        font-size: 28px;
-    }
-    #interest_sectl .star, .power, .perc{
-        float:left;
-    }
-    #interest_sectl .five_star .power{
-        margin: 3px 4px;
-        height: 10px;
-        width: 63px;
-        background: #ffd596 none repeat scroll 0 0;
-    }
-    #interest_sectl .four_star, .there_star, .two_star, .one_star{
-        clear:both;
-    }
-    #interest_sectl .four_star .power{
-        margin: 3px 4px;
-        height: 10px;
-        width: 30px;
-        background: #ffd596 none repeat scroll 0 0;
-    }
-    #interest_sectl .there_star .power{
-        margin: 3px 4px;
-        height: 10px;
-        width: 8px;
-        background: #ffd596 none repeat scroll 0 0;
-    }
-    #interest_sectl .two_star .power{
-        margin: 3px 4px;
-        height: 10px;
-        width: 0px;
-        background: #ffd596 none repeat scroll 0 0;
-    }
-    #interest_sectl .one_star .power{
-        margin: 3px 4px;
-        height: 10px;
-        width: 0px;
-        background: #ffd596 none repeat scroll 0 0;
-    }
-    .other{
-        clear:both;
-    }
-    .aside{
-        position: static;
-        left:640px;
-        bottom: 200px;
-    }
-    #footer{
-        clear:both;
-    }
-</style>
+{% block staticfiles %}{% load staticfiles %}{% endblock %}
 
+{% block css_link %}
+    <link rel="stylesheet" href="{% static "css/detail.css" %}" />
+{% endblock %}
+
+{% block content %}
 <div id="wrapper">
     <h1>
         <span class="detail_title">{{book_detail.title}}</span>
@@ -190,11 +71,53 @@
                 </div>
             </div>
             <div class="other">
-                add other
+                <div class = "remark">
+                    <input type="submit" class="minisubmit " value="想读" title="">
+                    <input type="submit" class="minisubmit " value="在读" title="">
+                    <input type="submit" class="minisubmit " value="读过" title="">         
+                    <div id="smallremark">评价</div>
+                    <span id="rating"> 
+                        <span id="stars" data-solid="https://img3.doubanio.com/f/shire/5a2327c04c0c231bced131ddf3f4467eb80c1c86/pics/rating_icons/star_onmouseover.png" data-hollow="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" data-solid-2x="https://img3.doubanio.com/f/shire/7258904022439076d57303c3b06ad195bf1dc41a/pics/rating_icons/star_onmouseover@2x.png" data-hollow-2x="https://img3.doubanio.com/f/shire/95cc2fa733221bb8edd28ad56a7145a5ad33383e/pics/rating_icons/star_hollow_hover@2x.png">
+
+                        <a href="https://www.baidu.com" class="j a_show_login" name="pbtn-1082154-1">
+                            <img src="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" id="star1" width="16" height="16">
+                        </a>
+                        <a href="https://www.baidu.com" class="j a_show_login" name="pbtn-1082154-2">
+                            <img src="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" id="star2" width="16" height="16">
+                        </a>
+                        <a href="https://www.baidu.com" class="j a_show_login" name="pbtn-1082154-3">
+                            <img src="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" id="star3" width="16" height="16">
+                        </a>
+                        <a href="https://www.baidu.com" class="j a_show_login" name="pbtn-1082154-4">
+                            <img src="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" id="star4" width="16" height="16">
+                        </a>
+                        <a href="https://www.baidu.com" class="j a_show_login" name="pbtn-1082154-5">
+                            <img src="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" id="star5" width="16" height="16">
+                        </a>
+                        </span>
+                    </span>
+                </div>
+                <div class = "share">
+                    <div class="sharelabel"><a href = "https://www.baidu.com">写笔记</a></div>
+                    <div class="sharelabel"><a href = "https://www.baidu.com">写书评</a></div>
+                    <div class="sharelabel"><a href = "https://www.baidu.com">分享到</a></div>
+                </div>
+                <div class = "bookintro">
+                    <div class="guide">内容简介  ......</div>
+                    <p class="cont">{{book_detail.content_intro}}</p>
+                </div>
+                <div class = "authorintro">
+                    <div class="guide">本书目录  ......</div>
+                    <p class="cont">{{book_detail.directory}}</p>                
+                </div>
+                <div class = "booklabel">
+                    <div class="guide">本书标签  ......</div>
+                    <p class="cont">{{book_detail.label}}</p>              
+                </div>
             </div>
         </div>
-        <div class="aside">as</div>
+        <div class="aside">售书信息</div>
     </div>
-    <div id="footer">footer</div>
+    <div id="footer">editor : 清华大学软件学院   Mzj马子俊  Yj杨景  Yky于科屹</div>
 </div>
 {% endblock %}
