--- a/static/css/base.css
+++ b/static/css/base.css
@@ -50,6 +50,13 @@
     float:right;
     padding: 0 12px;
 }
+.user-profile{
+    height: 20px;
+    width: 20px;
+    border-radius: 10px;
+    border: 2px solid white;
+    float: right;
+}
 .items{
     line-height: 20px;
 }
