middle term work

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 {% block staticfiles %}{% load staticfiles %}{% endblock %}
 
 {% block css_link %}
-    <link rel="stylesheet" href="{% static "css/home.css" %}" />
+    <link rel="stylesheet" href="{% static 'css/home.css' %}" />
 {% endblock %}
 
 {% block content %}
