--- a/templates/detail.html
+++ b/templates/detail.html
@@ -7,7 +7,7 @@
 {% block staticfiles %}{% load staticfiles %}{% endblock %}
 
 {% block css_link %}
-    <link rel="stylesheet" href="{% static "css/detail.css" %}" />
+    <link rel="stylesheet" href="{% static 'css/detail.css' %}" />
 {% endblock %}
 
 {% block content %}
