--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-{{title}}
+悦读网
 {% endblock %}
 
 {% load staticfiles %}
@@ -13,8 +13,35 @@
 {% block content %}
 <div class='container content'>
   <div class='laber row'>
-    <h2 class="laber-head">热门标签</h2>
-    <div class='literary col-xs-2'>
+    <h3 class="laber-head">热门标签</h3>
+    <div class="carousel slide col-xs-12 col-sm-4 col-sm-push-8" id="logo-slider" data-ride="carousel">
+      <ol class="carousel-indicators" style="background-color: orange">
+        <li data-target="#logo-slider" data-slide-to="0" class="active"></li>
+        <li data-target="#logo-slider" data-slide-to="1"></li>
+        <li data-target="#logo-slider" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="{% static 'images/book-logo-001.jpg' %}" class="img-responsive center-block"/>
+          <p class="item-caption">让书籍为你插上翅膀</p>
+        </div>
+        <div class="item">
+          <img src="{% static 'images/book-logo-002.jpg' %}" class="img-responsive center-block"/>
+          <p class="item-caption">让书籍晴朗你的时光</p>
+        </div>
+        <div class="item">
+          <img src="{% static 'images/book-logo-003.jpg' %}" class="img-responsive center-block"/>
+          <p class="item-caption">让书籍芬芳你的岁月</p>
+        </div>
+      </div>
+      <a class="left carousel-control" data-slide="prev" href="#logo-slider">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a class="right carousel-control" data-slide="next" href="#logo-slider">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
+    </div>
+    <div class='literary col-xs-3 col-sm-2 col-sm-pull-4'>
        <div class="panel panel-danger">
           <div class="panel-heading">文学</div>
           <ul class="list-group">
@@ -29,7 +56,7 @@
           </ul>
       </div>
     </div>
-    <div class='popular col-xs-2'>
+    <div class='popular col-xs-3 col-sm-2 col-sm-pull-4'>
       <div class="panel panel-primary">
         <div class="panel-heading">流行</div>
         <ul class="list-group">
@@ -44,7 +71,7 @@
         </ul>
       </div>
     </div>
-    <div class='culture col-xs-2'>
+    <div class='culture col-xs-3 col-sm-2 col-sm-pull-4'>
       <div class="panel panel-info">
         <div class="panel-heading">文化</div>
         <ul class="list-group">
@@ -59,7 +86,7 @@
         </ul>
       </div>
     </div>
-    <div class='technology col-xs-2'>
+    <div class='technology col-xs-3 col-sm-2 col-sm-pull-4'>
        <div class="panel panel-success">
           <div class="panel-heading">科技</div>
           <ul class="list-group">
@@ -74,13 +101,14 @@
           </ul>
        </div>
     </div>
+
   </div>
   <div class='row famous-book-section'>
-    <h2>最受欢迎图书榜</h2>
+    <h3 class="famous-head">最受欢迎图书榜</h3>
       {% for book in book_list %}
-      <div class="post-title col-xs-2 col-xs-offset-1">
+      <div class="post-title col-xs-4 col-sm-3 col-lg-2 col-xs-offset-1">
         <a href="{% url 'detail' book_id=book.book_id %}">
-          <img class="cover" src={{book.cover_url}}>
+          <img class="cover img-responsive center-block" src={{book.cover_url}}>
         </a>
         <a href="{% url 'detail' book_id=book.book_id %}">
           {{book.title}}
