--- a/templates/base.html
+++ b/templates/base.html
@@ -68,6 +68,13 @@
 {% endblock %}
 {% block content %}
 {% endblock %}
+  <footer class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">悦读网</div>
+      <div class="col-xs-12">Powered By 杨景 于科屹 马子俊</div>
+      <div class="col-xs-12">本站代码详见 https://github.com/YJGit/reading_website</div>
+    </div>
+  </footer>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 {% block js_link %}
