--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,3 +28,13 @@ ul, ol{
   text-align: center;
 }
 
+footer{
+  background-color: #222;
+}
+footer > div{
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-weight: 400;
+  color: white;
+}
