--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,120 +4,118 @@
 {{title}}
 {% endblock %}
 
-{% block staticfiles %}{% load staticfiles %}{% endblock %}
+{% load staticfiles %}
 
 {% block css_link %}
     <link rel="stylesheet" href="{% static "css/detail.css" %}" />
 {% endblock %}
 
 {% block content %}
-<div id="wrapper">
-    <h1>
-        <span class="detail_title">{{book_detail.title}}</span>
-        <div class="clear"></div>
-    </h1>
-    <div id="content">
-        <div class="article">
-            <div class="subjectwrap">
-                <div class="subject">
-                    <div id="mainpic">
-                        <a class="nbg" href={{book_detail.cover_url}} title={{book_detail.title}}>
-                            <img src={{book_detail.cover_url}} title="点击查看大图" alt={{book_detail.title}}>
-                        </a>
-                    </div>
-                    <div id="info">
-                        <div class="book_author">作者: <span class="show">{{book_detail.author}}</span></div>
-                        <div class="book_publisher">出版社: <span class="show">{{book_detail.publisher}}</span></div>
-                        {% if book_detail.translator != '无' %}
-                            <div class="book_translator">译者: <span class="show">{{book_detail.translator}}</span></div>
-                        {% endif %}
-                        <div class="book_publisher_date">出版年: <span class="show">{{book_detail.publisher_date}}</span></div>
-                        <div class="book_page">页数: <span class="show">{{book_detail.page}}</span></div>
-                        <div class="book_price">定价: <span class="show">{{book_detail.price}}</span></div>
-                        <div class="book_binding">装帧: <span class="show">{{book_detail.binding}}</span></div>
-                        <div class="book_Isbn">ISBN: <span class="show">{{book_detail.Isbn}}</span></div>
-                    </div>
-                </div>
-                <div id="interest_sectl">
-                    <div class="rate_logo">悦读评分</div>
-                    <div class="score_to_show">{{book_detail.score}}</div>
-                    <div class="score_rule">
-                        <div class="five_star">
-                            <div class="star">5星</div>
-                            <div class="power"></div>
-                            <div class="perc">62.8%</div>
-                        </div>
-                        <div class="four_star">
-                            <div class="star">4星</div>
-                            <div class="power"></div>
-                            <div class="perc">29.0%</div>
-                        </div>
-                        <div class="there_star">
-                            <div class="star">3星</div>
-                            <div class="power"></div>
-                            <div class="perc">8.4%</div>
-                        </div>
-                        <div class="two_star">
-                            <div class="star">2星</div>
-                            <div class="power"></div>
-                            <div class="perc">0.6%</div>
-                        </div>
-                        <div class="one_star">
-                            <div class="star">1星</div>
-                            <div class="power"></div>
-                            <div class="perc">0.2%</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="other">
-                <div class = "remark">
-                    <input type="submit" class="minisubmit " value="想读" title="">
-                    <input type="submit" class="minisubmit " value="在读" title="">
-                    <input type="submit" class="minisubmit " value="读过" title="">         
-                    <div id="smallremark">评价</div>
-                    <span id="rating"> 
-                        <span id="stars" data-solid="https://img3.doubanio.com/f/shire/5a2327c04c0c231bced131ddf3f4467eb80c1c86/pics/rating_icons/star_onmouseover.png" data-hollow="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" data-solid-2x="https://img3.doubanio.com/f/shire/7258904022439076d57303c3b06ad195bf1dc41a/pics/rating_icons/star_onmouseover@2x.png" data-hollow-2x="https://img3.doubanio.com/f/shire/95cc2fa733221bb8edd28ad56a7145a5ad33383e/pics/rating_icons/star_hollow_hover@2x.png">
-
-                        <a href="https://www.baidu.com" class="j a_show_login" name="pbtn-1082154-1">
-                            <img src="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" id="star1" width="16" height="16">
-                        </a>
-                        <a href="https://www.baidu.com" class="j a_show_login" name="pbtn-1082154-2">
-                            <img src="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" id="star2" width="16" height="16">
-                        </a>
-                        <a href="https://www.baidu.com" class="j a_show_login" name="pbtn-1082154-3">
-                            <img src="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" id="star3" width="16" height="16">
-                        </a>
-                        <a href="https://www.baidu.com" class="j a_show_login" name="pbtn-1082154-4">
-                            <img src="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" id="star4" width="16" height="16">
-                        </a>
-                        <a href="https://www.baidu.com" class="j a_show_login" name="pbtn-1082154-5">
-                            <img src="https://img3.doubanio.com/f/shire/2520c01967207a1735171056ec588c8c1257e5f8/pics/rating_icons/star_hollow_hover.png" id="star5" width="16" height="16">
-                        </a>
-                        </span>
-                    </span>
-                </div>
-                <div class = "share">
-                    <div class="sharelabel"><a href = "https://www.baidu.com">写笔记</a></div>
-                    <div class="sharelabel"><a href = "https://www.baidu.com">写书评</a></div>
-                    <div class="sharelabel"><a href = "https://www.baidu.com">分享到</a></div>
-                </div>
-                <div class = "bookintro">
-                    <div class="guide">内容简介  ......</div>
-                    <p class="cont">{{book_detail.content_intro}}</p>
-                </div>
-                <div class = "authorintro">
-                    <div class="guide">本书目录  ......</div>
-                    <p class="cont">{{book_detail.directory}}</p>                
-                </div>
-                <div class = "booklabel">
-                    <div class="guide">本书标签  ......</div>
-                    <p class="cont">{{book_detail.label}}</p>              
-                </div>
-            </div>
-        </div>
-        <div class="aside">售书信息</div>
+<div class='container content'>
+  <div class='book-intro row'>
+    <div class="book-picture col-xs-12 col-sm-4">
+      <h2 class="book_title">{{book_detail.title}}</h2>
+      <img src={{book_detail.cover_url}} alt={{book_detail.title}}/>
     </div>
-    <div id="footer">editor : 清华大学软件学院   Mzj马子俊  Yj杨景  Yky于科屹</div>
+    <div class="book-info col-xs-12 col-sm-4">
+      <h3 class="information">图书信息</h3>
+      <div class="book_author">作者:&nbsp;<span>{{book_detail.author}}</span></div>
+      <div class="book_publisher">出版社:&nbsp;<span>{{book_detail.publisher}}</span></div>
+      <div class="book_translator">译者:&nbsp;<span>{{book_detail.translator}}</span></div>
+      <div class="book_publisher_date">出版年:&nbsp;<span>{{book_detail.publisher_date}}</span></div>
+      <div class="book_page">页数:&nbsp;<span>{{book_detail.page}}</span></div>
+      <div class="book_price">定价:&nbsp;<span>{{book_detail.price}}</span></div>
+      <div class="book_binding">装帧:&nbsp;<span>{{book_detail.binding}}</span></div>
+      <div class="book_Isbn">ISBN:&nbsp;<span>{{book_detail.Isbn}}</span></div>
+    </div>
+    <div class="book-score col-xs-12 col-sm-4">
+      <div class="rate_logo">悦读评分</div>
+      <div class="score_to_show">{{book_detail.score}}</div>
+      <div class="score_rule">
+        <div class="five_star">
+          <div class="star">5星</div>
+          <div class="perc">62.8%</div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="62.8" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 62.8%"></div>
+          </div>
+        </div>
+        <div class="four_star">
+          <div class="star">4星</div>
+          <div class="perc">29.0%</div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="29.0" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 29.0%"></div>
+          </div>
+        </div>
+        <div class="there_star">
+          <div class="star">3星</div>
+          <div class="perc">8.4%</div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="8.4" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 8.4%"></div>
+          </div>
+        </div>
+        <div class="two_star">
+          <div class="star">2星</div>
+          <div class="perc">0.6%</div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0.6" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 0.6%"></div>
+          </div>
+        </div>
+        <div class="one_star">
+          <div class="star">1星</div>
+          <div class="perc">0.2%</div>
+          <div class="progress">
+            <div>
+              <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0.2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 0.2%"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <h3>标签</h3>
+  <div class="label-set row">
+    {% for label in book_labels %}
+    <div class="book-label col-xs-3 col-md-2">
+      <a href="...">{{ label }}</a>
+    </div>
+    {% endfor %}
+  </div>
+  <div class="book-remark row">
+    <div class="rating col-xs-4">
+      <span class="rate">评价</span>
+      <span class="glyphicon glyphicon-star-empty star" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-star-empty star" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-star-empty star" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-star-empty star" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-star-empty star" aria-hidden="true"></span>
+    </div>
+    <div class = "share col-xs-4">
+      <a href = "https://www.baidu.com">写笔记</a>
+      <a href = "https://www.baidu.com">写书评</a>
+      <a href = "https://www.baidu.com">分享到</a>
+    </div>
+  </div>
+  <div class="book-summary row">
+    <div class="book-content col-xs-5 col-xs-offset-1">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">内容简介  ......</h3>
+        </div>
+        <div class="panel-body">
+          <p class="cont">{{book_detail.content_intro}}</p>
+        </div>
+      </div>
+    </div>
+    <div class="book-directory col-xs-5 col-xs-offset-1">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">本书目录  ......</h3>
+        </div>
+        <div class="panel-body">
+          <p class="cont">{{book_detail.directory}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
