--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 {% load staticfiles %}
 
 {% block css_link %}
-    <link rel="stylesheet" href="{% static 'css/home.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/home.css' %}" />
 {% endblock %}
 
 {% block content %}
