--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     {% block css_link %}{% endblock %}
 </head>
 <body>
+{%block navigation %}
   <!-- This is the navigation bar fixed at the top -->
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
@@ -48,6 +49,7 @@
       </div>
     </div>
   </nav>
+{% endblock %}
 <!-- This is the search bar -->
 {% block search %}
   <div class="container search-bar">
@@ -70,6 +72,7 @@
 {% endblock %}
 {% block content %}
 {% endblock %}
+{% block footer %}
   <footer class="container-fluid">
     <div class="row">
       <div class="col-xs-12">悦读网</div>
@@ -77,6 +80,7 @@
       <div class="col-xs-12">本站代码详见 https://github.com/YJGit/reading_website</div>
     </div>
   </footer>
+{% endblock %}
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 {% block js_link %}
